- удаление старой спецификации - поправил нейминг методов